@@ -15,6 +15,8 @@ interface changes:
   SCIPintervalSolveUnivariateQuadExpressionPositiveAllScalar() now take an additional argument to specify already
   existing bounds on x, providing an entire interval ([-infinity,infinity]) gives previous behavior
 - added function SCIPintervalSolveUnivariateQuadExpressionNegative()
+- removed parameter "heuristics/alns/stallnodefactor" as the stall nodes are now controlled
+  directly by the target node limit within the heuristic.
 
 new parameters:
 - "lp/checkfarkas" that enables the check of infeasibility proofs from the LP
@@ -22,6 +24,8 @@ new parameters:
 
 deleted files:
 - presol_implfree removed
+
+
 
 SCIP version 5.0.2
 =================
